[gd_scene load_steps=20 format=3 uid="uid://c14yqrr3v517m"]

[ext_resource type="Script" path="res://scenes/objects/player/player.gd" id="1_dpj2d"]
[ext_resource type="PackedScene" uid="uid://b2070o2xrpvxm" path="res://models/Player/world.blend" id="2_o5pnn"]
[ext_resource type="PackedScene" uid="uid://csg8tg2yc54a4" path="res://scenes/objects/player/weapons/kahuna.tscn" id="3_22u2e"]
[ext_resource type="Script" path="res://addons/resonate/sound_manager/sound_bank.gd" id="4_f6syw"]
[ext_resource type="PackedScene" uid="uid://c6q52fo7dtilb" path="res://scenes/objects/player/weapons/evening_star.tscn" id="4_m7ewg"]
[ext_resource type="Script" path="res://addons/resonate/sound_manager/sound_event_resource.gd" id="5_0noxr"]
[ext_resource type="AudioStream" uid="uid://brbspw6hc4hvn" path="res://sounds/player/jump.wav" id="6_mnyf7"]
[ext_resource type="AudioStream" uid="uid://c8jmmjciry514" path="res://sounds/player/land.wav" id="7_l8ijv"]
[ext_resource type="PackedScene" uid="uid://cw5db61ywuftn" path="res://scenes/ui/hud.tscn" id="8_6ckix"]
[ext_resource type="Script" path="res://addons/state_machine_nodes/state_machine.gd" id="10_05sjf"]
[ext_resource type="Script" path="res://scenes/objects/player/states/common_state.gd" id="11_7h62c"]
[ext_resource type="Script" path="res://scenes/objects/player/states/idle.gd" id="11_cdtuv"]
[ext_resource type="Script" path="res://scenes/objects/player/states/walk.gd" id="12_em8ir"]
[ext_resource type="Script" path="res://scenes/objects/player/states/jump.gd" id="13_lhipt"]
[ext_resource type="Script" path="res://scenes/objects/player/states/fall.gd" id="14_gtayp"]
[ext_resource type="Script" path="res://scenes/objects/player/states/kick.gd" id="16_y4b88"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5q4gb"]
radius = 0.4

[sub_resource type="Resource" id="Resource_7mg3l"]
script = ExtResource("5_0noxr")
name = "jump"
bus = ""
volume = -8.0
pitch = 1.0
streams = Array[AudioStream]([ExtResource("6_mnyf7")])

[sub_resource type="Resource" id="Resource_7qg7o"]
script = ExtResource("5_0noxr")
name = "land"
bus = ""
volume = -8.0
pitch = 1.0
streams = Array[AudioStream]([ExtResource("7_l8ijv")])

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 21
script = ExtResource("1_dpj2d")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_5q4gb")

[node name="WorldModel" parent="." instance=ExtResource("2_o5pnn")]
transform = Transform3D(-2.18557e-08, 0, 0.5, 0, 0.5, 0, -0.5, 0, -2.18557e-08, 0, 0, 0)

[node name="Gemini0" parent="WorldModel" index="0"]
transform = Transform3D(1.94707e-07, 0, 1, 0, 1, 0, -1, 0, 1.94707e-07, 0, 0, 0)

[node name="Skeleton3D" parent="WorldModel/Gemini0" index="0"]
bones/1/rotation = Quaternion(0.0951591, 1.18668e-07, 1.13438e-08, 0.995462)
bones/2/rotation = Quaternion(-0.0184329, 7.22809e-15, -4.39475e-09, 0.99983)
bones/3/rotation = Quaternion(-0.0977716, -3.12359e-15, -2.33106e-08, 0.995209)
bones/4/rotation = Quaternion(0.00677673, -3.57275e-15, 1.6157e-09, 0.999977)
bones/5/rotation = Quaternion(0.411185, 1.08665e-07, 1.47051e-07, 0.911552)
bones/6/rotation = Quaternion(-0.257208, 1.02939e-13, -1.22647e-07, 0.966356)
bones/7/rotation = Quaternion(-0.140537, -1.18026e-07, -5.02599e-08, 0.990075)
bones/8/rotation = Quaternion(0.99716, 2.67212e-14, 2.37741e-07, -0.0753068)
bones/9/rotation = Quaternion(-0.0412805, 1.47508e-14, -9.84202e-09, 0.999148)
bones/10/rotation = Quaternion(-0.0438047, 2.15173e-14, -1.04438e-08, 0.99904)
bones/11/rotation = Quaternion(-0.00833551, -1.19189e-07, 9.93532e-10, 0.999965)
bones/13/scale = Vector3(1, 1, 1)
bones/14/rotation = Quaternion(0.651542, 0.165138, -0.181886, 0.717733)
bones/15/scale = Vector3(1, 1, 1)
bones/16/rotation = Quaternion(-0.0150437, 0.743955, -0.0399174, 0.666867)
bones/16/scale = Vector3(1, 1, 1)
bones/17/rotation = Quaternion(0.160508, -0.0863937, 0.0287797, 0.982825)
bones/19/rotation = Quaternion(0.00737724, -0.000646373, 0.16086, 0.986949)
bones/19/scale = Vector3(1, 1, 1)
bones/20/rotation = Quaternion(-0.0224489, 0.00170852, -0.38104, 0.924284)
bones/20/scale = Vector3(1, 1, 1)
bones/21/rotation = Quaternion(0.0373187, -0.000951971, -0.0168518, 0.999161)
bones/22/rotation = Quaternion(-0.062312, 4.49498e-08, 0.0434831, 0.997109)
bones/23/rotation = Quaternion(-0.547698, 0.431208, 0.443988, 0.562993)
bones/23/scale = Vector3(1, 1, 1)
bones/24/rotation = Quaternion(-0.0150437, -0.743955, 0.0399174, 0.666867)
bones/24/scale = Vector3(1, 1, 1)
bones/25/rotation = Quaternion(0.160508, 0.0863937, -0.0287797, 0.982825)
bones/25/scale = Vector3(1, 1, 1)
bones/27/rotation = Quaternion(0.00737724, 0.000646362, -0.16086, 0.986949)
bones/27/scale = Vector3(1, 1, 1)
bones/28/rotation = Quaternion(-0.0224489, -0.0017085, 0.38104, 0.924284)
bones/28/scale = Vector3(1, 1, 1)
bones/29/scale = Vector3(1, 1, 1)
bones/30/rotation = Quaternion(-0.0623119, -4.33153e-08, -0.0434831, 0.997109)
bones/31/rotation = Quaternion(-0.136478, -0.784147, -0.309839, 0.520084)
bones/31/scale = Vector3(1, 1, 1)
bones/32/rotation = Quaternion(-0.136478, 0.784147, 0.309839, 0.520085)
bones/32/scale = Vector3(1, 1, 1)
bones/33/rotation = Quaternion(0.99189, 2.98052e-10, 2.36446e-07, 0.127096)
bones/33/scale = Vector3(1, 1, 0.999996)
bones/34/rotation = Quaternion(0.0980697, 2.94553e-11, 2.36806e-08, 0.99518)
bones/35/rotation = Quaternion(-0.64305, 4.56469e-07, -5.36604e-07, 0.765824)
bones/36/rotation = Quaternion(8.49769e-08, 0.991139, -0.132826, 7.83747e-07)
bones/36/scale = Vector3(1, 1, 1)
bones/37/rotation = Quaternion(0.698845, 0.698845, -0.107774, 0.107775)
bones/37/scale = Vector3(1, 1, 1)
bones/38/rotation = Quaternion(0.99189, -3.0004e-08, -3.86622e-11, 0.127096)
bones/38/scale = Vector3(1, 1, 0.999996)
bones/39/rotation = Quaternion(0.0980697, 2.94526e-11, -2.30825e-08, 0.99518)
bones/40/rotation = Quaternion(-0.64305, -4.56469e-07, 5.36604e-07, 0.765824)
bones/41/rotation = Quaternion(-8.49769e-08, 0.991139, -0.132826, -7.83747e-07)
bones/41/scale = Vector3(1, 1, 1)
bones/42/rotation = Quaternion(0.698845, -0.698845, 0.107774, 0.107775)
bones/42/scale = Vector3(1, 1, 1)

[node name="arms" parent="WorldModel/Gemini0/Skeleton3D" index="0"]
layers = 2

[node name="cutter" parent="WorldModel/Gemini0/Skeleton3D" index="1"]
layers = 2

[node name="ears" parent="WorldModel/Gemini0/Skeleton3D" index="2"]
layers = 2

[node name="gun" parent="WorldModel/Gemini0/Skeleton3D" index="3"]
layers = 2

[node name="hair" parent="WorldModel/Gemini0/Skeleton3D" index="4"]
layers = 2

[node name="hair_det" parent="WorldModel/Gemini0/Skeleton3D" index="5"]
layers = 2

[node name="hands" parent="WorldModel/Gemini0/Skeleton3D" index="6"]
layers = 2

[node name="head_GameEdit" parent="WorldModel/Gemini0/Skeleton3D" index="7"]
layers = 2

[node name="legs" parent="WorldModel/Gemini0/Skeleton3D" index="8"]
layers = 2

[node name="neck" parent="WorldModel/Gemini0/Skeleton3D" index="9"]
layers = 2

[node name="scarf1" parent="WorldModel/Gemini0/Skeleton3D" index="10"]
layers = 2

[node name="scarf2" parent="WorldModel/Gemini0/Skeleton3D" index="11"]
layers = 2

[node name="shoes" parent="WorldModel/Gemini0/Skeleton3D" index="12"]
layers = 2

[node name="sweatshirt" parent="WorldModel/Gemini0/Skeleton3D" index="13"]
layers = 2

[node name="AnimationPlayer" parent="WorldModel" index="1"]
autoplay = "Idle"

[node name="Cameras" type="Node3D" parent="."]

[node name="FirstPersonCamera" type="Camera3D" parent="Cameras"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
cull_mask = 1048573
current = true
fov = 90.0

[node name="Weapons" type="Node3D" parent="Cameras/FirstPersonCamera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, 0)

[node name="Kahuna" parent="Cameras/FirstPersonCamera/Weapons" instance=ExtResource("3_22u2e")]
transform = Transform3D(-2.18557e-08, -1.91069e-15, -0.5, -4.37114e-08, 0.5, 0, -0.5, -4.37114e-08, 2.18557e-08, 0, 1.4, 0.15)

[node name="Evening Star" parent="Cameras/FirstPersonCamera/Weapons" instance=ExtResource("4_m7ewg")]
process_mode = 4
transform = Transform3D(-2.18557e-08, 0, -0.5, 0, 0.5, 0, -0.5, 0, 2.18557e-08, 0, 1.4, 0.15)
visible = false

[node name="ThirdPersonCamera" type="Camera3D" parent="Cameras"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 2.5, 3)
cull_mask = 1048511
fov = 90.0

[node name="SoundBank" type="Node" parent="."]
script = ExtResource("4_f6syw")
label = "player"
events = Array[ExtResource("5_0noxr")]([SubResource("Resource_7mg3l"), SubResource("Resource_7qg7o")])

[node name="HUD" parent="." instance=ExtResource("8_6ckix")]

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "target_node")]
script = ExtResource("10_05sjf")
initial_state = NodePath("Idle")
target_node = NodePath("..")

[node name="None" type="Node" parent="StateMachine"]
script = ExtResource("11_7h62c")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("11_cdtuv")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("12_em8ir")

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource("13_lhipt")

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource("14_gtayp")

[node name="Kick" type="Node" parent="StateMachine"]
script = ExtResource("16_y4b88")

[node name="Slide" type="Node" parent="StateMachine"]
script = ExtResource("11_cdtuv")

[node name="KickCooldown" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="state_changed" from="StateMachine" to="." method="_on_state_machine_state_changed"]

[editable path="WorldModel"]
